examples/fail/lexer/invalid_hex_digit.bina
// EXPECT_LEXER_ERROR: invalid hexadecimal literal
fn main() -> int {
    let x = 0xG;
    return 0;
}
